// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sourcemaps attrs types 1`] = `
import * as __VueDX_TypeCheck from 'vuedx~runtime';
import { defineComponent as __VueDX_defineComponent, GlobalComponents as __VueDX_GlobalComponents } from 'vue';
//#region <script>

const __VueDX__Script_Component = __VueDX_defineComponent({});
//#endregion
//#region <script setup>
 ;const __VueDX__ScriptSetup_scope = __VueDX_TypeCheck.internal.scope(async () => {
const __VueDX__ScriptSetup_props = defineProps({});
const __VueDX__ScriptSetup_emits = ({});
const __VueDX__ScriptSetup_expose = {};
const __VueDX__ScriptSetup_internalProps = {};
const __VueDX__ScriptSetup_Component = __VueDX_defineComponent((_: typeof __VueDX__ScriptSetup_internalProps)=> {});

//#endregion
function __VueDX_RegisterSelf<T>(ctx: T) {
  return { ...ctx, ["Example"]: Example }
}
const __VueDX_ctx = __VueDX_RegisterSelf(new __VueDX__Script_Component())
//#region <template>
function __VueDX_render() {
  /*<vuedx:templateGlobals>*/
  let a = __VueDX_ctx.a
  let b = __VueDX_ctx.b
  let c = __VueDX_ctx.c
  let $slots = __VueDX_ctx.$slots
  /*</vuedx:templateGlobals>*/
  return (
    <>
      {a
        ? <>
            <div
              /*<vuedx:tsx-completions-target/>*/
            />
          </>
        : b
        ? <>
            <span
              /*<vuedx:tsx-completions-target/>*/
            />
          </>
        : <>
            {c
              ? <>
                  <p
                    /*<vuedx:tsx-completions-target/>*/
                  />
                </>
              : null
            }
          </>
      }
    </>
  )
}
__VueDX_render();
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let a = __VueDX_ctx.a
  let b = __VueDX_ctx.b
  let c = __VueDX_ctx.c
  let $slots = __VueDX_ctx.$slots
  /*</vuedx:templateGlobals>*/
  return __VueDX_TypeCheck.internal.union(__VueDX_TypeCheck.internal.flat([
  ]))
}
/*</vuedx:diagnosticsIgnore>*/
const __VueDX__attrs = (() => {
  return __VueDX_TypeCheck.internal.first(__VueDX_TypeCheck.internal.flat([
    {} as unknown as __VueDX_TypeCheck.internal.PropsOf<JSX.IntrinsicElements, "div">,
    {} as unknown as __VueDX_TypeCheck.internal.PropsOf<JSX.IntrinsicElements, "span">,
    {} as unknown as __VueDX_TypeCheck.internal.PropsOf<JSX.IntrinsicElements, "p">,
  ]))
})();
//#endregion
return {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx};});
const {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx} = __VueDX__ScriptSetup_scope;
//#region public component definition
const ExamplePublic = null as unknown as new () => typeof __VueDX__ScriptSetup_expose;
export default class Example extends ExamplePublic {
  $props = null as unknown as __VueDX_TypeCheck.internal.MergeAttrs<typeof __VueDX_ctx.$props, typeof __VueDX__attrs>;
  $slots = null as unknown as __VueDX_TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion

`;

exports[`sourcemaps component 1`] = `
import * as __VueDX_TypeCheck from 'vuedx~runtime';
import { defineComponent as __VueDX_defineComponent, GlobalComponents as __VueDX_GlobalComponents } from 'vue';
//#region <script>

const __VueDX__Script_Component = __VueDX_defineComponent({});
//#endregion
//#region <script setup>

import { ref } from 'vue' ;const __VueDX__ScriptSetup_scope = __VueDX_TypeCheck.internal.scope(async () => {

const a = ref(false)
let b  = 5
let c: { foo: string} | undefined
const __VueDX__ScriptSetup_props = defineProps({});
const __VueDX__ScriptSetup_emits = ({});
const __VueDX__ScriptSetup_expose = {};
const __VueDX__ScriptSetup_internalProps = {};
const __VueDX__ScriptSetup_Component = __VueDX_defineComponent((_: typeof __VueDX__ScriptSetup_internalProps)=> {});

//#endregion
function __VueDX_RegisterSelf<T>(ctx: T) {
  return { ...ctx, ["Example"]: Example }
}
const __VueDX_ctx = __VueDX_RegisterSelf(new __VueDX__ScriptSetup_Component())
//#region <template>
/*<vuedx:templateGlobals>*/
const __VueDX__get_identifier_a = () => __VueDX_TypeCheck.internal.unref(a);
const __VueDX__get_identifier_b = () => __VueDX_TypeCheck.internal.unref(b);
const __VueDX__get_identifier_c = () => __VueDX_TypeCheck.internal.unref(c);
/*</vuedx:templateGlobals>*/
function __VueDX_render() {
  /*<vuedx:templateGlobals>*/
  let a = __VueDX__get_identifier_a();
  let b = __VueDX__get_identifier_b();
  let c = __VueDX__get_identifier_c();
  let $slots = __VueDX_ctx.$slots
  /*</vuedx:templateGlobals>*/
  return (
    <>
      <div
        innerHTML={a}
        /*<vuedx:tsx-completions-target/>*/
      />
      <div
        innerHTML={b}
        /*<vuedx:tsx-completions-target/>*/
      />
      <div
        innerHTML={c}
        /*<vuedx:tsx-completions-target/>*/
      />
      <div
        innerHTML={c?.foo}
        /*<vuedx:tsx-completions-target/>*/
      />
    </>
  )
}
__VueDX_render();
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let a = __VueDX__get_identifier_a();
  let b = __VueDX__get_identifier_b();
  let c = __VueDX__get_identifier_c();
  let $slots = __VueDX_ctx.$slots
  /*</vuedx:templateGlobals>*/
  return __VueDX_TypeCheck.internal.union(__VueDX_TypeCheck.internal.flat([
  ]))
}
/*</vuedx:diagnosticsIgnore>*/
const __VueDX__attrs = (() => {
  return __VueDX_TypeCheck.internal.first(__VueDX_TypeCheck.internal.flat([{}]))
})();
//#endregion
return {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx};});
const {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx} = __VueDX__ScriptSetup_scope;
//#region public component definition
const ExamplePublic = null as unknown as new () => typeof __VueDX__ScriptSetup_expose;
export default class Example extends ExamplePublic {
  $props = null as unknown as __VueDX_TypeCheck.internal.MergeAttrs<typeof __VueDX_ctx.$props & __VueDX_TypeCheck.internal.EmitsToProps<typeof __VueDX__ScriptSetup_emits>, typeof __VueDX__attrs>;
  $slots = null as unknown as __VueDX_TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion

`;

exports[`sourcemaps directives 1`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34 (2:18)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
          ^^^^^ > 5 at 1516 (37:10)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 2`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34 (2:18)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
          ^^^^^ > 5 at 1516 (37:10)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 3`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37 (2:21)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
             ^^ > 2 at 1519 (37:13)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 4`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37 (2:21)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
             ^^ > 2 at 1519 (37:13)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 5`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34 (2:18)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
          ^^^^^ > 5 at 1516 (37:10)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 6`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34 (2:18)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
          ^^^^^ > 5 at 1516 (37:10)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 7`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37 (2:21)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
             ^^ > 2 at 1519 (37:13)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 8`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37 (2:21)
    </template>
    
----
        a=""
        onA={__VueDX_TypeCheck.internal.first([
          onNum, 
             ^^ > 2 at 1519 (37:13)
        ])}
        onB={__VueDX_TypeCheck.internal.first([
`;

exports[`sourcemaps directives 9`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                   ^^^^^^^^ > 8 at 67 (2:51)
    </template>
    
----
        onC={__VueDX_TypeCheck.internal.first([
          ($event) => {
          call.a['func']($event)
                ^^^^^^^^ > 8 at 1702 (44:16)
          }, 
        ])}
`;

exports[`sourcemaps directives 10`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                   ^^^^^^^^ > 8 at 67 (2:51)
    </template>
    
----
        onC={__VueDX_TypeCheck.internal.first([
          ($event) => {
          call.a['func']($event)
                ^^^^^^^^ > 8 at 1702 (44:16)
          }, 
        ])}
`;

exports[`sourcemaps directives 11`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                            ^^^^^^ > 6 at 76 (2:60)
    </template>
    
----
        onC={__VueDX_TypeCheck.internal.first([
          ($event) => {
          call.a['func']($event)
                         ^^^^^^ > 6 at 1711 (44:25)
          }, 
        ])}
`;

exports[`sourcemaps directives 12`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                            ^^^^^^ > 6 at 76 (2:60)
    </template>
    
----
        onC={__VueDX_TypeCheck.internal.first([
          ($event) => {
          call.a['func']($event)
                         ^^^^^^ > 6 at 1711 (44:25)
          }, 
        ])}
`;

exports[`sourcemaps v-if on template + v-slot 1`] = `
import * as __VueDX_TypeCheck from 'vuedx~runtime';
import { defineComponent as __VueDX_defineComponent, GlobalComponents as __VueDX_GlobalComponents } from 'vue';
//#region <script>

const __VueDX__Script_Component = __VueDX_defineComponent({});
//#endregion
//#region <script setup>
 ;const __VueDX__ScriptSetup_scope = __VueDX_TypeCheck.internal.scope(async () => {
const __VueDX__ScriptSetup_props = defineProps({});
const __VueDX__ScriptSetup_emits = ({});
const __VueDX__ScriptSetup_expose = {};
const __VueDX__ScriptSetup_internalProps = {};
const __VueDX__ScriptSetup_Component = __VueDX_defineComponent((_: typeof __VueDX__ScriptSetup_internalProps)=> {});

//#endregion
function __VueDX_RegisterSelf<T>(ctx: T) {
  return { ...ctx, ["Example"]: Example }
}
const __VueDX_ctx = __VueDX_RegisterSelf(new __VueDX__Script_Component())
//#region <template>
/*<vuedx:templateGlobals>*/
const __VueDX__get_identifier_A = () => A;
/*</vuedx:templateGlobals>*/
function __VueDX_render() {
  /*<vuedx:templateGlobals>*/
  let $slots = __VueDX_ctx.$slots
  let foo = __VueDX_ctx.foo
  /*</vuedx:templateGlobals>*/
  /*<vuedx:templateGlobals>*/
  const A = __VueDX_TypeCheck.internal.resolveComponent({} as unknown as __VueDX_GlobalComponents, {} as unknown as JSX.IntrinsicElements, __VueDX_ctx, __VueDX__get_identifier_A(), "A" as const, "A" as const);
  /*</vuedx:templateGlobals>*/
  return (
    <>
      <A
        /*<vuedx:tsx-completions-target/>*/
      >
        {__VueDX_TypeCheck.internal.checkSlots(A, {
          "a": () => {
            return (
              <>
                {$slots.a
                  ? <>
                      {foo}
                    </>
                  : null
                }
              </>
            )
          },
        })}
      </A>
    </>
  )
}
__VueDX_render();
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let $slots = __VueDX_ctx.$slots
  let foo = __VueDX_ctx.foo
  /*</vuedx:templateGlobals>*/
  return __VueDX_TypeCheck.internal.union(__VueDX_TypeCheck.internal.flat([
  ]))
}
/*</vuedx:diagnosticsIgnore>*/
const __VueDX__attrs = (() => {
  return __VueDX_TypeCheck.internal.first(__VueDX_TypeCheck.internal.flat([{}]))
})();
//#endregion
return {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx};});
const {__VueDX__ScriptSetup_Component, __VueDX__ScriptSetup_props, __VueDX__ScriptSetup_emits, __VueDX__ScriptSetup_expose, __VueDX__attrs, __VueDX__slots, __VueDX_ctx} = __VueDX__ScriptSetup_scope;
//#region public component definition
const ExamplePublic = null as unknown as new () => typeof __VueDX__ScriptSetup_expose;
export default class Example extends ExamplePublic {
  $props = null as unknown as __VueDX_TypeCheck.internal.MergeAttrs<typeof __VueDX_ctx.$props, typeof __VueDX__attrs>;
  $slots = null as unknown as __VueDX_TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion

`;

exports[`sourcemaps v-on shorthand 1`] = `

    <template>
      <B a="" @a="onStr" />
               ^ > 1 at 31 (2:15)
    </template>
    
----
      <B
        a=""
        onA={__VueDX_TypeCheck.internal.first([
        ^ > 1 at 1436 (35:8)
          onStr, 
        ])}
`;

exports[`sourcemaps v-on shorthand 2`] = `

    <template>
      <B a="" @a="onStr" />
                > 0 at 31 (2:15)
    </template>
    
----
      <B
        a=""
        onA={__VueDX_TypeCheck.internal.first([
        ^ > 1 at 1436 (35:8)
          onStr, 
        ])}
`;

exports[`sourcemaps v-text 1`] = `

    <template>
      <div v-text="a" />
                   ^ > 1 at 35 (2:19)
    </template>
    
----
    <>
      <div
        innerHTML={a}
                   ^ > 1 at 1057 (28:19)
        /*<vuedx:tsx-completions-target/>*/
      />
`;

exports[`sourcemaps v-text 2`] = `

    <template>
      <div v-text="a" />
                   ^ > 1 at 35 (2:19)
    </template>
    
----
    <>
      <div
        innerHTML={a}
                   ^ > 1 at 1057 (28:19)
        /*<vuedx:tsx-completions-target/>*/
      />
`;
